<resources>

    <string name="app_name">旋律中文</string>

    <!--  SplashPage  -->
    <string name="slogan1">听中文歌</string>
    <string name="slogan2">学汉语</string>
    
    <!--  Homepage  -->
    <string name="homepage">主页</string>
    <string name="music_list">歌曲列表</string>
    <string name="school_info">学院简介</string>
    <string name="first_rank">初级</string>
    <string name="second_rank">中级</string>
    <string name="third_rank">高级</string>

    <string name="card_text1">一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十</string>
    <string name="card_text2">一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十</string>

    <string name="app_info">关于旋律中文
本软件是"面向留学生汉语学习的中文歌曲App设计"项目的成果，致力于以HSK(汉语水平考试)为纲，通过改编创新当下流行的热门中文歌曲，将考纲词汇、语法点、古文诗词融入其中，以音乐传播文化，共筑中外交流桥梁。
关于等级分类
初级对应HSK中的1~2级词汇，大约300词，适合零基础或刚入门的留学生；中级对应HSK中的1~4级词汇，以3~4级为主，大约1200词，适合有一定基础的留学生；高级对应HSK中的1~6级词汇，以5~6级为主，大约5000词，适合基础比较牢固，想进一步提升汉语水平的留学生。
网易云地址
我们将在网易云的个人专辑同步上传歌曲，您可以在有网络的情况下在线播放，并在交流区与其他同伴一起交流学习中文心得，对歌曲的建议等等。
旋律中文声明
本软件及网易云平台的歌曲均为改编，出发点在于让留学生更好地学习中文，一律不做商用，如有冒犯请多谅解，并联系负责人处理。
帮助和反馈
感谢您对旋律中文的支持，我们深知改编的歌曲有不尽如人意的地方，技术上也并不够完善。如果您有意见或建议，欢迎联系vx：18181431173反馈，我们珍惜每一条宝贵的意见或建议，并会加以改进，做得更好。
</string>

</resources>
