<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/homepage_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/light_NKUPurple"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium">

            <TextView
                android:id="@+id/fist_rank"
                android:text="@string/first_rank"
                style="@style/HomepageHeader.Title"/>

            <Button
                android:layout_toEndOf="@+id/fist_rank"
                android:text="季节 1"
                style="@style/HomepageHeader.Button" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium">

            <TextView
                android:id="@+id/second_rank"
                android:text="@string/second_rank"
                style="@style/HomepageHeader.Title"/>

            <Button
                android:id="@+id/bt_friend"
                android:layout_toEndOf="@+id/second_rank"
                android:text="友情 2"
                style="@style/HomepageHeader.Button"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium">

            <TextView
                android:id="@+id/third_rank"
                android:text="@string/third_rank"
                style="@style/HomepageHeader.Title"/>

            <Button
                android:id="@+id/bt_love"
                android:layout_toEndOf="@+id/third_rank"
                android:text="爱情 1"
                style="@style/HomepageHeader.Button"/>

        </RelativeLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/homepage_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"

            app:cardElevation="@dimen/dp_2"
            app:cardCornerRadius="@dimen/dp_15"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.85"
            app:layout_constraintWidth_percent="0.85">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_card_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:text="子在川上曰：“逝者如斯夫，不舍昼夜。”"/>

                <ImageView
                    android:id="@+id/iv_card_img"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:layout_marginBottom="@dimen/margin_large"
                    android:adjustViewBounds="true"
                    android:scaleType="fitEnd"
                    android:src="@mipmap/test_pic"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>